--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@ body.custom-background { background-color: #ffffff; }
 
 	<aside id="secondary" class="sidebar widget-area" role="complementary">
 		<section id="polylang-4" class="widget widget_polylang"><ul>
-	<li class="lang-item lang-item-9 lang-item-fr"><a hreflang="de-DE" href="../palafra.github.io/de/index.html" lang="de-DE">Deutsch</a></li>
-	<li class="lang-item lang-item-9 lang-item-fr"><a hreflang="fr-FR" href="../palafra.github.io/fr/index.html" lang="fr-FR">Français</a></li>
-	<li class="lang-item lang-item-5 lang-item-en"><a hreflang="en-US" href="../palafra.github.io/en/index.html" lang="en-US">English</a></li>
+	<li class="lang-item lang-item-9 lang-item-fr"><a hreflang="de-DE" href="../de/index.html" lang="de-DE">Deutsch</a></li>
+	<li class="lang-item lang-item-9 lang-item-fr"><a hreflang="fr-FR" href="../fr/index.html" lang="fr-FR">Français</a></li>
+	<li class="lang-item lang-item-5 lang-item-en"><a hreflang="en-US" href="../en/index.html" lang="en-US">English</a></li>
 </ul>
 </section>
 
