--- a/en/teams.html
+++ b/en/teams.html
@@ -184,7 +184,7 @@ body.custom-background { background-color: #ffffff; }
 <h2>Eberhard Karls Universität Tübingen</h2>
 <h4>Romance studies</h4>
 <p>The project members at the University of Tübingen are concerned with the compilation of the Latin corpus texts and the collection of the required metadata, as well as the development of an appropriate tag set.</p>
-<p><img class="alignleft size-thumbnail wp-image-152" src="../assets/eufe-150x113.jpeg" alt="eufe" width="150" height="113" srcset="../assets/eufe-150x113.jpeg 150w, ../assets/eufe.jpeg 230w" sizes="(max-width: 150px) 85vw, 150px" /><a href="http://www.romanistik.uni-tuebingen.de/eufe.html">Apl. Prof. Dr. Rembert Eufe</a><br />
+<p><img class="alignleft size-thumbnail wp-image-152" src="../assets/eufe-150x113.jpeg" alt="eufe" width="150" height="113" srcset="../assets/eufe-150x113.jpeg 150w, ../assets/eufe.jpeg 230w" sizes="(max-width: 150px) 85vw, 150px" /><a href="https://uni-tuebingen.de/fakultaeten/philosophische-fakultaet/fachbereiche/neuphilologie/romanisches-seminar/personal/lehrkoerper/eufe/">Apl. Prof. Dr. Rembert Eufe</a><br />
 
 <p><br style="clear: both;" /><img class="alignleft size-thumbnail wp-image-154" src="../assets/ortner-117x150.jpg" alt="ortner" width="117" height="150" srcset="../assets/ortner-117x150.jpg 117w, ../assets/ortner.jpg 207w" sizes="(max-width: 117px) 85vw, 117px" /><a href="http://www.romanistik.uni-muenchen.de/personen/wiss_ma/ortner/index.html">Sebastian Ortner, M. A.</a> (Ph.D. student)<br />
 
