--- a/de/teams.html
+++ b/de/teams.html
@@ -175,7 +175,7 @@ body.custom-background { background-color: #ffffff; }
 
 
 <p><br style="clear: both;" /><img class="alignleft size-thumbnail wp-image-203" src="../assets/reichle-150x150.jpg" alt="reichle" width="150" height="150" srcset="../assets/reichle-150x150.jpg 150w, ../assets/reichle.jpg 191w" sizes="(max-width: 150px) 85vw, 150px" /><a href="
-https://www.uni-regensburg.de/sprache-literatur-kultur/romanistik/sprachwissenschaft/mitarbeiter-selig/elisabeth-reichle/index.html">Elisabeth Reichle</a> (Wiss. Mitarbeiterin, Doktorandin)<br />
+https://www.uni-regensburg.de/sprache-literatur-kultur/romanistik/sprachwissenschaft/mitarbeiter-selig/elisabeth-reichle/index.html">Elisabeth Reichle</a> (Wissenschaftliche Mitarbeiterin, Doktorandin)<br />
 
 <p><br style="clear: both;" /><strong>Studentische Hilfskräfte:</strong> Christina Bauer, Waldemar Blech, Veronika Gonschorek, Silvia Prokoph, Victoria Seitz, Matthias Sieber, Julia Stockinger, Marius Wahl, Mirjam Zelzer</p><br />
 <h4>Medieninformatik</h4>
