--- a/de/teams.html
+++ b/de/teams.html
@@ -143,7 +143,7 @@ body.custom-background { background-color: #ffffff; }
 		<h2>Université de Lille</h2>
 		<h4><span class="st">CNRS UMR 8163 &#8211; </span><span class="st">Savoirs, Textes, Langage</span></h4>
 <p>Die Gruppe an der Universität Lille koordiniert die Auswertung und Erprobung der Korpora und die Bündelung der Ergebnisse in einem Handbuch</p>
-<p><img class="alignleft size-full wp-image-197" src="../assets/carlier.jpg" alt="carlier" width="116" height="101" /><a href="https://sites.google.com/site/annecarlierfrenchlinguistics/">Prof. Anne Carlier</a><br />
+<p><img class="alignleft size-full wp-image-197" src="../assets/carlier.jpg" alt="carlier" width="116" height="101" /><a href="https://sites.google.com/site/annecarlierfrenchlinguistics/">Prof. Anne Carlier (jetzt Sorbonne Paris)</a><br />
 
 
 <p><br style="clear: both;" /><img class="alignleft size-thumbnail wp-image-198" src="../assets/vangaever-92x150.png" alt="vangaever" width="92" height="150" srcset="../assets/vangaever-92x150.png 92w, ../assets/vangaever.png 98w" sizes="(max-width: 92px) 85vw, 92px" /><a href="http://research.flw.ugent.be/nl/jasper.vangaever">Jasper Vangaever</a> (Doktorand)<br />
@@ -161,7 +161,7 @@ body.custom-background { background-color: #ffffff; }
 
 <p><br style="clear: both;" /><img class="alignleft size-thumbnail wp-image-174" src="../assets/heiden-150x113.jpg" alt="heiden" width="150" height="113" srcset="../assets/heiden-150x113.jpg 150w, ../assets/heiden.jpg 266w" sizes="(max-width: 150px) 85vw, 150px" /><a href="http://ihrim.ens-lyon.fr/auteur/heiden-serge">Serge Heiden </a> (Forschungsingenieur)<br />
 
-<p><br style="clear: both;" /><img class="alignleft size-thumbnail wp-image-178" src="../assets/kanaoka-112x150.jpg" alt="kanaoka" width="112" height="150" srcset="../assets/kanaoka-112x150.jpg 112w, ../assets/kanaoka-224x300.jpg 224w, ../assets/kanaoka.jpg 344w" sizes="(max-width: 112px) 85vw, 112px" /><a href="http://www.ens-lyon.fr/mme-kanaoka-naomie-242844.kjsp?RH=ENS-LYON">Naomi Kanaoka</a> (Postdoc)<br />
+<p><br style="clear: both;" /><img class="alignleft size-thumbnail wp-image-178" src="../assets/kanaoka-112x150.jpg" alt="kanaoka" width="112" height="150" srcset="../assets/kanaoka-112x150.jpg 112w, ../assets/kanaoka-224x300.jpg 224w, ../assets/kanaoka.jpg 344w" sizes="(max-width: 112px) 85vw, 112px" />Naomi Kanaoka</a> (Postdoc)<br />
 
 <p><br style="clear: both;" /><img class="alignleft size-thumbnail wp-image-179" src="../assets/lavrentev-109x150.jpg" alt="lavrentev" width="109" height="150" srcset="../assets/lavrentev-109x150.jpg 109w, ../assets/lavrentev-219x300.jpg 219w, ../assets/lavrentev.jpg 267w" sizes="(max-width: 109px) 85vw, 109px" /><a href="http://ihrim.ens-lyon.fr/auteur/lavrentev-alexey">Alexei Lavrentiev</a> (Forschungsingenieur)<br />
 
@@ -184,7 +184,7 @@ https://www.uni-regensburg.de/sprache-literatur-kultur/romanistik/sprachwissensc
 
 <p><br style="clear: both;" /><img class="alignleft size-thumbnail wp-image-208" src="../assets/burghardt-150x150.jpg" alt="burghardt" width="150" height="150" srcset="../assets/burghardt-150x150.jpg 150w, ../assets/burghardt.jpg 191w" sizes="(max-width: 150px) 85vw, 150px" /><a href="http://www.uni-regensburg.de/sprache-literatur-kultur/medieninformatik/sekretariat-team/manuel-burghardt/index.html">Dr. Manuel Burghardt</a> (Postdoc)<br />
 
-<p><br style="clear: both;" /><img class="alignleft size-thumbnail wp-image-209" src="../assets/doehling-150x112.jpg" alt="doehling" width="150" height="112" srcset="../assets/doehling-150x112.jpg 150w, ../assets/doehling.jpg 300w" sizes="(max-width: 150px) 85vw, 150px" /><a href="http://www.uni-regensburg.de/sprache-literatur-kultur/medieninformatik/sekretariat-team/lars-doehling-dipl-inf-/index.html">Dr. Lars Döhling</a> (Wiss. Mitarbeiter)<br />
+<p><br style="clear: both;" /><img class="alignleft size-thumbnail wp-image-209" src="../assets/doehling-150x112.jpg" alt="doehling" width="150" height="112" srcset="../assets/doehling-150x112.jpg 150w, ../assets/doehling.jpg 300w" sizes="(max-width: 150px) 85vw, 150px" />Dr. Lars Döhling</a> (Wiss. Mitarbeiter)<br />
 
 <h5>&nbsp;</h5>
 <h2>Eberhard Karls Universität Tübingen</h2>
