--- a/de/teams.html
+++ b/de/teams.html
@@ -143,7 +143,7 @@ body.custom-background { background-color: #ffffff; }
 		<h2>Université de Lille</h2>
 		<h4><span class="st">CNRS UMR 8163 &#8211; </span><span class="st">Savoirs, Textes, Langage</span></h4>
 <p>Die Gruppe an der Universität Lille koordiniert die Auswertung und Erprobung der Korpora und die Bündelung der Ergebnisse in einem Handbuch</p>
-<p><img class="alignleft size-full wp-image-197" src="../assets/carlier.jpg" alt="carlier" width="116" height="101" /><a href="https://sites.google.com/site/annecarlierfrenchlinguistics/">Prof. Anne Carlier (jetzt Sorbonne Paris)</a><br />
+<p><img class="alignleft size-full wp-image-197" src="../assets/carlier.jpg" alt="carlier" width="116" height="101" /><a href="https://sites.google.com/site/annecarlierfrenchlinguistics/">Prof. Anne Carlier</a> (jetzt Sorbonne Paris)<br />
 
 
 <p><br style="clear: both;" /><img class="alignleft size-thumbnail wp-image-198" src="../assets/vangaever-92x150.png" alt="vangaever" width="92" height="150" srcset="../assets/vangaever-92x150.png 92w, ../assets/vangaever.png 98w" sizes="(max-width: 92px) 85vw, 92px" /><a href="http://research.flw.ugent.be/nl/jasper.vangaever">Jasper Vangaever</a> (Doktorand)<br />
