--- a/de/teams.html
+++ b/de/teams.html
@@ -192,7 +192,7 @@ https://www.uni-regensburg.de/sprache-literatur-kultur/romanistik/sprachwissensc
 <p>Die Projektmitglieder an der Universität Tübingen sind mit der Zusammenstellung  der lateinischen Korpustexte und der Sammlung der erforderlichen Metadaten befasst sowie mit der Entwicklung eines geeigneten Tagsets.</p>
 <p><img class="alignleft size-thumbnail wp-image-152" src="../assets/eufe-150x113.jpeg" alt="eufe" width="150" height="113" srcset="../assets/eufe-150x113.jpeg 150w, ../assets/eufe.jpeg 230w" sizes="(max-width: 150px) 85vw, 150px" /><a href="https://uni-tuebingen.de/fakultaeten/philosophische-fakultaet/fachbereiche/neuphilologie/romanisches-seminar/personal/lehrkoerper/eufe/">Apl. Prof. Dr. Rembert Eufe</a><br />
 
-<p><br style="clear: both;" /><img class="alignleft size-thumbnail wp-image-154" src="../assets/ortner-117x150.jpg" alt="ortner" width="117" height="150" srcset="../assets/ortner-117x150.jpg 117w, ../assets/ortner.jpg 207w" sizes="(max-width: 117px) 85vw, 117px" /><a href="http://www.romanistik.uni-muenchen.de/personen/wiss_ma/ortner/index.html">Sebastian Ortner, M. A.</a> (Wiss. Mitarbeiter, Doktorand)<br />
+<p><br style="clear: both;" /><img class="alignleft size-thumbnail wp-image-154" src="../assets/ortner-117x150.jpg" alt="ortner" width="117" height="150" srcset="../assets/ortner-117x150.jpg 117w, ../assets/ortner.jpg 207w" sizes="(max-width: 117px) 85vw, 117px" /><a href="http://www.romanistik.uni-muenchen.de/personen/wiss_ma/ortner/index.html">Sebastian Ortner, M. A.</a> (Wiss. Mitarbeiter, Doktorand, jetzt LMU München)<br />
 
 <p><br style="clear: both;" /><strong>Studentische Hilfskräfte:</strong> Delia Brix, Renée Eisele</p><br />
 
