--- a/fr/teams.html
+++ b/fr/teams.html
@@ -189,7 +189,7 @@ https://www.uni-regensburg.de/sprache-literatur-kultur/romanistik/sprachwissensc
 <p>Les membres du projet à l’Université de Tübingen s’occupent de la compilation des textes latins du corpus et des métadonnées, ainsi que du développement d’un jeu d’étiquettes approprié.</p>
 <p><img class="alignleft size-thumbnail wp-image-152" src="../assets/eufe-150x113.jpeg" alt="eufe" width="150" height="113" srcset="../assets/eufe-150x113.jpeg 150w, ../assets/eufe.jpeg 230w" sizes="(max-width: 150px) 85vw, 150px" /><a href="https://uni-tuebingen.de/fakultaeten/philosophische-fakultaet/fachbereiche/neuphilologie/romanisches-seminar/personal/lehrkoerper/eufe/">Apl. Prof. Dr. Rembert Eufe</a><br />
 
-<p><br style="clear: both;" /><img class="alignleft size-thumbnail wp-image-154" src="../assets/ortner-117x150.jpg" alt="ortner" width="117" height="150" srcset="../assets/ortner-117x150.jpg 117w, ../assets/ortner.jpg 207w" sizes="(max-width: 117px) 85vw, 117px" /><a href="http://www.romanistik.uni-muenchen.de/personen/wiss_ma/ortner/index.html">Sebastian Ortner, M. A.</a> (doctorant)<br />
+<p><br style="clear: both;" /><img class="alignleft size-thumbnail wp-image-154" src="../assets/ortner-117x150.jpg" alt="ortner" width="117" height="150" srcset="../assets/ortner-117x150.jpg 117w, ../assets/ortner.jpg 207w" sizes="(max-width: 117px) 85vw, 117px" /><a href="http://www.romanistik.uni-muenchen.de/personen/wiss_ma/ortner/index.html">Sebastian Ortner, M. A.</a> (doctorant, maintenant LMU Munich)<br />
 
 <p><br style="clear: both;" /><strong>Auxiliaires universitaires:</strong> Delia Brix, Renée Eisele</p><br />
 	</div><!-- .entry-content -->
